# xlc

./: .coveragerc  .gitignore  .xproject_python  Makefile  requirements.txt  setup.cfg  setup.py
reference/: Makefile
toolkit/memory/: xlc.py
tools/: check.py
xlc/: .coveragerc  .flake8  Makefile  __init__.py  attribute.py  message.py  pyproject.toml  setup.py
xlc-tools/: .coveragerc  Makefile  requirements.txt  setup.cfg
xlc-tools/xlc_tools/: generate.py
xlc/database/: __init__.py  format  generate  langtags.py  langtags.toml  subtags.py
xlc/language/: __init__.py  message.py  segment.py
xlc/unittest/: test_database.py  test_language.py  test_message.py
xlc/unittest/messages/: en.xlc  zh-Hant.xlc  zh_cn.xlc  zh_hans.xlc  zh_hant.xlc
xlc/xlc/: attribute.py
xlc/xlc/unittest/: test_database.py
xlc/xlc/unittest/messages/: zh-Hans.xlc  zh-TW.xlc
