[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "toml",
]

[project]
authors = [
    { name = "Mingzhe Zou", email = "zoumingzhe@outlook.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "Internationalization(i18n) and Localization(l10n) of Multiple Languages"
dynamic = [
    "dependencies",
    "version",
]
keywords = []
license-files = [
    "LICENSE",
]
name = "xlc"
requires-python = ">=3.8"

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
Homepage = "https://github.com/bondbox/xlc/"

[tool.setuptools.packages.find]
exclude = [
    "xlc.unittest",
]
include = [
    "xlc*",
]

[tool.setuptools.package-data]
"xlc.database" = ["langmark.toml", "langtags.toml", "*.tar.xz"]
